#comment Fixed css issues, added class to p tag, fixed some spacing issues

--- a/src/styles/Teams.css
+++ b/src/styles/Teams.css
@@ -10,12 +10,14 @@
     margin: auto;
     text-align: center;
     font-size: 40px;
+    padding-top: 3%;
 
 }
 
-p {
+.team-description {
     margin: auto;
     text-align: center;
+    color: #3b92dd;
     padding-bottom: 2%;
     padding-left: 20%;
     padding-right: 20%;
@@ -26,11 +28,6 @@ p {
     margin: auto auto 10% auto!important;
     color: #3b92dd;
     width: 50%;
-    
-    /* justify-content: center; */
-    /* padding-left: 100px;
-    border-left: 100px; */
-    /* text-align: right; */
 }
 .leads{
     margin: auto !important;
@@ -44,9 +41,9 @@ p {
     align-items: center;
 }
 
-button{
+.go-to-alumni-btn{
     color: #3b92dd;
-    margin: auto auto 5% auto;
+    margin: auto;
     border-radius: 10px;
     background-color: rgba(59,146,221,0.2);
     
